Text input no longer overlaps button. length of stack names in stack view truncated to 3 lines.

--- a/components/ui/InputTextArea/InputTextArea.module.css
+++ b/components/ui/InputTextArea/InputTextArea.module.css
@@ -69,7 +69,7 @@
     position: relative;
     width: 100%;
     resize: none;
-    padding: 1rem;
+    padding: 1rem 2.5rem 1rem 1rem;
     margin: 0;
     line-height: 1.5;
     outline: none;
